Fix mobile search box bg overflow

--- a/intranet/static/css/eighth.signup.css
+++ b/intranet/static/css/eighth.signup.css
@@ -205,7 +205,6 @@
     position: relative;
     margin-right: 451px;
     z-index: 999;
-    background-color: rgb(242,242,244);
     border-bottom: 1px solid rgb(216, 216, 216);
 }
 
